final draft for the UMS talk

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[14pt]{chalkfjord}
 
-\includeonlyframes{distributive-law}
+%\includeonlyframes{slidenames}
 
 \usepackage{ulem}
 \usetikzlibrary{matrix,arrows}
@@ -2132,13 +2132,14 @@ Elements of division ring will be \\
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}[label=next-steps]
   \frametitle{Next steps}
 
   \vfill
-
+  \Huge 
   \begin{center}
-    Non-Desarguesian projective planes?
+    Non-Desarguesian \\
+    projective planes?
   \end{center}
   
   \vfill
